--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2017",
+        "module": "commonjs",
         "outDir": "dest",
         "noImplicitAny": true,
         "removeComments": true,
@@ -8,7 +9,8 @@
         "sourceMap": true
     },
     "include": [
-        "src/**/*"
+        "src",
+        "node_modules/@types/puppeteer/index.d.ts"
     ],
     "exclude": [
         "node_modules"
